# BayesianHouseApp

./: BayesianWebApp.py  README.md  predictions.pkl  pyproject.toml
sqlmesh/: config.yaml
sqlmesh/audits/: audit_gr_liv_area.sql  audit_lot_area.sql  audit_no_nulls.sql  audit_standardization.sql
sqlmesh/models/: drop_gr_liv_area.sql  drop_lot_area.sql  drop_null.sql  interaction.sql  log_saleprice.sql  seed_model.sql  select_features.sql  standardized_model.sql
sqlmesh/tests/: test_select_features_schema.yaml
sqlmodel/: houses_crud.db
